assets/css/main.css
html, body{
	margin: 0;
	padding:0;
	font-family: 'Lato', sans-serif;
}
.removegridmargins{
	margin:0;
	padding:0;
}

@media screen and (max-width: 767px){
	ul{
		list-style: none;
		font-size: 1.5em;
	}
}
@media screen and (min-width: 768px) {
    .sidebar-div{
    	/*padding-top: 100%;
    	padding-left: 20%;*/
    	margin: 0;
    	height: 100vh;
    	box-sizing: border-box;
    	background-color: white;
    	padding-top: 0vh;
		/*padding-left: 2vw;*/
		position: fixed;
		z-index:10;
		width: 16.566%;
		box-shadow: 1px 0px 8px rgba(0,0,0,0.5),
						0px 0 1px rgba(0,0,0,0.9);
    }
    ul{
    	list-style: none;
    	width: inherit;
		text-align: right;
		padding-right: 7%;
		font-size: 1.75vw;
		padding-left: 0;
		position: relative;
		/*top: 150px;*/
    }
    #logo{
    	font-size: 3.5em;
    	padding-bottom: 15vh;
    	display: block;
    }
    ul li{
    	margin-bottom: 10px;
    }
    ul li a, ul a{
    	color:black;
    	text-decoration: none;
    }
    ul li a:hover, ul a:hover{
    	color: black;
    }
    .pointer{
    	width: 0.9em;
    	transition: all 0.2s;
    	stroke-dasharray: 0, 20;
    	stroke-dashoffset: -13.642;
    }
    .pointer path{
    	fill: none;
    	stroke: black;
    	stroke-width:1px;
    }
    ul li a:active + .pointer{
    	stroke-dasharray: 28.284, 20;
    	stroke-dashoffset: 0;
    }
    .active{
    	stroke-dasharray: 28.284, 20;
    	stroke-dashoffset: 0;
    }
}

#landing{
	color: white;
	overflow: hidden;
	background-image: url('../images/about.jpg');
	background-position: center;
	background-size: cover;
	height: 100vh;
	background-attachment: fixed;
	opacity: 0.8;
}

h1{
	text-align: center;
	/*position: absolute;*/
	margin-top: 20%;
	font-size: 4em;
	font-weight: 700;
	text-shadow: 1px 1px 8px rgba(0,0,0,0.3),
					0px 0px 20px rgba(0,0,0,0.2);
}
.links{
	text-align: center;
	position: absolute;
	/*top:40vh;*/
	left:46%;
	z-index: 1;
}
.links a i{
	font-size: 3em;
	padding: 10px 10px;
	color: lightgrey;
}
.links a:hover i{
	color: white;
	text-shadow: 1px 0px 8px rgba(0,0,0,0.3),
						0px 0 1px rgba(0,0,0,0.2);
}
.aboutDiv{
	position: relative;
	/*background-color: pink;*/
	top:10vh;
	max-height: 50%
	font-size: 1.1vw;
}
h3{
	text-align: center;
	text-shadow: 1px 1px 8px #565353;
	letter-spacing: 3px;
}
h4{
	font-weight: 700;
	font-size: 1.5em;
}
p{
	font-size: 1.5em;
}
hr{
	width: 300px;
	max-width: 80%;
	text-shadow: 1px 1px 8px #565353;
}
a{
	color:white;
	text-decoration: none;
}
a:hover{
	text-decoration: none;
	color: white;
}

